# qstring

./: .gitignore  .readthedocs.yaml  .travis.yml  CHANGES.rst  LICENSE  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: python-package.yml  release.yml
docs/: Makefile  api.rst  conf.py  contributing.rst  index.rst  installation.rst  license.rst
qstring/: __init__.py  nest.py  unnest.py
src/qstring/: __init__.py  exc.py  nest.py
tests/: test_nest.py  test_unnest.py
